Package: future.BatchJobs
=========================

Version: 0.13.1-9000 [2017-03-07]

NEW FEATURES:

 o Option 'future.wait.timeout' (replaces 'future.wait.times') specifies
   the maximum waiting time for BatchJobs futures to finish before
   generating a timeout error.

BUG FIX:

 o Futures with globals would give an error when using the developers
   version of BatchJobs (> 1.6) with globals (<= 0.7.1).  Package now
   requires future (>= 1.3.0) which in turn requires globals (>= 0.8.0).

DEPRECATED AND DEFUNCT:

 o Previously deprecated batchjobs() and backend() functions are defunct.
   Instead, use one of the corresponding batchjobs_*() functions.
 

Version: 0.13.1 [2016-10-20]

NEW FEATURES:

 o Added argument 'job.delay' to batchjobs_*() futures for passing
   it as is to BatchJobs::submitJobs() used when launching futures.
   
 o Added argument 'label' to batchjobs_*() futures which are reflected
   in the job name listed by schedulers.  Because of limitation is
   BatchJobs, not all characters in the labels are supported and are
   therefore dropped in the job names.

GLOBAL VARIABLES:

 o GLOBALS: Now globals can be specified explicitly.


Version: 0.13.0 [2016-08-02]

NEW FEATURES:

 o Added argument 'resources' to batchjobs_*() functions for passing
   it to the BatchJobs template (as variable 'resources').
   
 o ROBUSTNESS: value() now launches the future iff not already done.
   Added protection from launching a future more than once.


Version: 0.12.1 [2016-06-26]

DOCUMENTATION:

 o Advising against _multicore BatchJobs_ futures, because there
   is a risk for long waiting times due to starvation.
   This is a limitation of the BatchJobs package.

BUG FIX:

 o Multicore BatchJobs futures are not supported on Solaris Unix and
   now falls back to local BatchJobs futures (as on Windows).
   This is a limitation of the BatchJobs package.


Version: 0.12.0 [2016-06-25]

NEW FEATURES:

 o Added predefined batchjobs_local(), batchjobs_interactive(),