@@ -5,15 +5,8 @@ S3method(delete,BatchJobsFuture)
 S3method(finished,BatchJobsFuture)
 S3method(loggedError,BatchJobsFuture)
 S3method(loggedOutput,BatchJobsFuture)
-S3method(nbrOfWorkers,batchjobs_custom)
-S3method(nbrOfWorkers,batchjobs_interactive)
-S3method(nbrOfWorkers,batchjobs_local)
-S3method(nbrOfWorkers,batchjobs_lsf)
+S3method(nbrOfWorkers,batchjobs)
 S3method(nbrOfWorkers,batchjobs_multicore)
-S3method(nbrOfWorkers,batchjobs_openlava)
-S3method(nbrOfWorkers,batchjobs_sge)
-S3method(nbrOfWorkers,batchjobs_slurm)
-S3method(nbrOfWorkers,batchjobs_torque)
 S3method(print,BatchJobsFuture)
 S3method(resolved,BatchJobsFuture)
 S3method(status,BatchJobsFuture)
