@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/batchjobs.R
+% Please edit documentation in R/DEPRECATED.batchjobs.R
 \name{batchjobs}
 \alias{batchjobs}
 \title{A BatchJobs future represents a future that is resolved by one of the many BatchJobs backends}
