@@ -6,7 +6,8 @@
 \title{BatchJobs local and interactive futures}
 \usage{
 batchjobs_local(expr, envir = parent.frame(), substitute = TRUE,
-  globals = TRUE, label = "BatchJobs", job.delay = FALSE, ...)
+  globals = TRUE, label = "BatchJobs", workers = 1L, job.delay = FALSE,
+  ...)
 }
 \arguments{
 \item{expr}{The R expression to be evaluated}
@@ -20,6 +21,9 @@ should be located.}
 \item{globals}{(optional) a logical, a character vector, a named list, or a \link[globals]{Globals} object.  If TRUE, globals are identified by code inspection based on \code{expr} and \code{tweak} searching from environment \code{envir}.  If FALSE, no globals are used.  If a character vector, then globals are identified by lookup based their names \code{globals} searching from environment \code{envir}.  If a named list or a Globals object, the globals are used as is.}
 
 \item{label}{(optional) Label of the future (where applicable, becomes the job name for most job schedulers).}
+
+\item{workers}{(optional) Additional specification for
+the BatchJobs backend.}
 
 \item{job.delay}{(optional) Passed as is to \code{\link[BatchJobs]{submitJobs}()}.}
 
