@@ -1,18 +1,12 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/nbrOfWorkers.R
-\name{nbrOfWorkers.batchjobs_local}
-\alias{nbrOfWorkers.batchjobs_local}
+\name{nbrOfWorkers.batchjobs}
+\alias{nbrOfWorkers.batchjobs}
 \alias{nbrOfWorkers.batchjobs_interactive}
 \alias{nbrOfWorkers.batchjobs_multicore}
-\alias{nbrOfWorkers.batchjobs_custom}
-\alias{nbrOfWorkers.batchjobs_lsf}
-\alias{nbrOfWorkers.batchjobs_openlava}
-\alias{nbrOfWorkers.batchjobs_sge}
-\alias{nbrOfWorkers.batchjobs_slurm}
-\alias{nbrOfWorkers.batchjobs_torque}
 \title{Gets the number of BatchJobs workers}
 \usage{
-\method{nbrOfWorkers}{batchjobs_local}(evaluator)
+\method{nbrOfWorkers}{batchjobs}(evaluator)
 }
 \arguments{
 \item{evaluator}{A future evaluator function.
